# easyWarehouse

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logstash.conf  pyproject.toml
.github/workflows/: main.yml
data/: dump.json
easywarehouse/: manage.py
easywarehouse/categories/: forms.py  models.py  urls.py  views.py
easywarehouse/categories/migrations/: 0001_initial.py
easywarehouse/easywarehouse/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
easywarehouse/employee/: apps.py  urls.py  views.py
easywarehouse/images/: forms.py  models.py  urls.py  views.py
easywarehouse/images/migrations/: 0001_initial.py
easywarehouse/products/: admin.py  documents.py  forms.py  models.py  urls.py  views.py
easywarehouse/products/migrations/: 0001_initial.py  0002_auto_20210421_1335.py  0003_auto_20210516_1756.py  0004_auto_20210516_1906.py  0005_auto_20210521_1325.py  0006_auto_20210525_0739.py  0007_rename_max_quantity_product_good_availability_threshold.py  0008_product_main_image_url.py  0009_auto_20210530_1532.py  0009_product_ean.py  0010_alter_product_ean.py  0011_merge_0009_auto_20210530_1532_0010_alter_product_ean.py
easywarehouse/products/templatetags/: url_replace.py
easywarehouse/static/: employee.css  images.css  list.css  product.css  product_list.css  style.css
easywarehouse/static/script/: availabilityColors.js
easywarehouse/templates/: base.html  base_list.html  index.html  product_details.html  product_search.html
easywarehouse/templates/categories/: add.html  (+3 more)
logstash/: Dockerfile  logstash.conf
(+27 files in other folders)
