[tool.poetry]
name = "easywarehouse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
elasticsearch = "^7.12.0"
boto3 = "1.17.58"
django-storages = "1.11.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
psycopg2-binary = "^2.8.6"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
