[tool.poetry]
name = "easyWarehouse"
version = "0.2.0"
description = "Best warehouse management software"
authors = ["Jcob Chodubski", "Roland Jałoszyński", "Michał Wróbel"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
boto3 = "1.17.58"
django-storages = "1.11.1"
Pillow = "^8.2.0"
django-elasticsearch-dsl = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
psycopg2-binary = "^2.8.6"
rope = "^0.19.0"
django-extensions = "^3.1.3"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
